--- a/templates/home.html
+++ b/templates/home.html
@@ -1,142 +1,144 @@
-{% extends "base.html" %}
-
-{% block content %}
-  <main>
-    <div class="container">
-
-      <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
-
-        <!-- Navbar brand -->
-        <span class="navbar-brand">Categories:</span>
-
-        <!-- Collapse button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
-          aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- Collapsible content -->
-        <div class="collapse navbar-collapse" id="basicExampleNav">
-
-          <!-- Links -->
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">All
-                <span class="sr-only">(current)</span>
+{% extends "base.html" %} {% block content %}
+<main>
+  <div class="container">
+    <!-- Navbar -->
+    <nav
+      class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5"
+    >
+      <!-- Navbar brand -->
+      <span class="navbar-brand">Categories:</span>
+      <!-- Collapse button -->
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#basicExampleNav"
+        aria-controls="basicExampleNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Collapsible content -->
+      <div class="collapse navbar-collapse" id="basicExampleNav">
+        <!-- Links -->
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >All <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#">Shirts</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Sport wears</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Outwears</a></li>
+        </ul>
+        <!-- Search form -->
+        <form class="form-inline">
+          <div class="md-form my-0">
+            <input
+              class="form-control mr-sm-2"
+              type="text"
+              placeholder="Search"
+              aria-label="Search"
+            />
+          </div>
+        </form>
+      </div>
+      <!-- Collapsible content -->
+    </nav>
+    <!-- Section: Products v.3 -->
+    <section class="text-center mb-4">
+      <div class="row wow fadeIn">
+        {% for item in object_list %}
+        <div class="col-lg-3 col-md-6 mb-4">
+          <div class="card">
+            <div class="view overlay">
+              <img src="{{ item.image.url }}" class="card-img-top" />
+              <a href="{{ item.get_absolute_url }}">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+            <div class="card-body text-center">
+              <a href="" class="grey-text">
+                <h5>{{ item.get_category_display }}</h5>
+              </a>
+              <h5>
+                <strong>
+                  <a href="{{ item.get_absolute_url }}" class="dark-grey-text">
+                    {{ item.title }}
+                    <span
+                      class="badge badge-pill {{ item.get_label_display }}-color"
+                      >NEW</span
+                    >
+                  </a>
+                </strong>
+              </h5>
+              <h4 class="font-weight-bold blue-text">
+                <strong>
+                  {% if item.discount_price %} ${{ item.discount_price }}
+                  {%else%} {{ item.price }} {% endif %}
+                </strong>
+              </h4>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </section>
+    <!-- Pagination -->
+    {% if page_obj.has_other_pages %}
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="pagination_wrap d-flex justify-content-center">
+          <ul class="pagination">
+            <!-- Previous Button -->
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+              <a
+                href="?page={{ page_obj.previous_page_number }}"
+                class="page-link"
+                aria-label="Previous"
+              >
+                <i class="ti-angle-left"></i> Previous
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Shirts</a>
+            {% else %}
+            <li class="page-item disabled">
+              <span class="page-link">
+                <i class="ti-angle-left"></i> Previous
+              </span>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sport wears</a>
+            {% endif %}
+            <!-- Page Numbers -->
+            {% for i in page_obj.paginator.page_range %}
+            <li
+              class="page-item {% if page_obj.number == i %}active{% endif %}"
+            >
+              <a href="?page={{ i }}" class="page-link">{{ i }}</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Outwears</a>
+            {% endfor %}
+            <!-- Next Button -->
+            {% if page_obj.has_next %}
+            <li class="page-item">
+              <a
+                href="?page={{ page_obj.next_page_number }}"
+                class="page-link"
+                aria-label="Next"
+              >
+                Next <i class="ti-angle-right"></i>
+              </a>
             </li>
-
+            {% else %}
+            <li class="page-item disabled">
+              <span class="page-link">
+                Next <i class="ti-angle-right"></i>
+              </span>
+            </li>
+            {% endif %}
           </ul>
-          <!-- Links -->
-
-          <form class="form-inline">
-            <div class="md-form my-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-          </form>
         </div>
-        <!-- Collapsible content -->
-
-      </nav>
-      <!--/.Navbar-->
-
-      <!--Section: Products v.3-->
-      <section class="text-center mb-4">
-
-        <div class="row wow fadeIn">
-
-          {% for item in object_list %}
-          <div class="col-lg-3 col-md-6 mb-4">
-
-            <div class="card">
-
-              <div class="view overlay">
-                {% comment %} <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top" {% endcomment %}
-                <img src="{{ item.image.url }}" class="card-img-top">
-                <a href="{{ item.get_absolute_url }}">
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
-
-              <div class="card-body text-center">
-                <a href="" class="grey-text">
-                  <h5>{{ item.get_category_display }}</h5>
-                </a>
-                <h5>
-                  <strong>
-                    <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.title }}
-                      <span class="badge badge-pill {{ item.get_label_display }}-color">NEW</span>
-                    </a>
-                  </strong>
-                </h5>
-
-                <h4 class="font-weight-bold blue-text">
-                  <strong>$
-                  {% if item.discount_price %}
-                  {{ item.discount_price }}
-                  {% else %}
-                  {{ item.price }}
-                  {% endif %}
-                  </strong>
-                </h4>
-
-              </div>
-
-            </div>
-
-          </div>
-          {% endfor %}
-        </div>
-
-      </section>
-      <!--Section: Products v.3-->
-
-      <!--Pagination-->
-
-      {% if is_paginated %}
-      <nav class="d-flex justify-content-center wow fadeIn">
-        <ul class="pagination pg-blue">
-
-          {% if page_obj.has_previous %}
-          <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-          {% endif %}
-
-          <li class="page-item active">
-            <a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }}
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-
-          {% if page_obj.has_next %}
-          <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
-          {% endif %}
-        </ul>
-      </nav>
-      {% endif %}
-
+      </div>
     </div>
-  </main>
-
-{% endblock content %}
-
-
+    {% endif %} {% endblock %}
+  </div>
+</main>
