--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,48 +1,77 @@
-<footer class="page-footer text-center font-small mt-4 wow fadeIn">
+<footer
+  class="page-footer text-center font-small mt-4 wow fadeIn bg-dark text-white py-4"
+>
+  <div class="container">
+    <div class="row">
+      <!-- Contact Us Section -->
+      <div class="col-md-6 mb-4">
+        <h5 class="text-uppercase">📩 Contact Us</h5>
+        <p class="mb-1"><i class="fas fa-map-marker-alt"></i> Suez, Egypt</p>
+        <p class="mb-1">
+          <i class="fas fa-envelope"></i> contact@yourwebsite.com
+        </p>
+        <p class="mb-1"><i class="fas fa-phone"></i> +20 100 123 4567</p>
+      </div>
 
-    <hr class="my-4">
-
-    <!-- Social icons -->
-    <div class="pb-4">
-      <a href="https://www.facebook.com/mdbootstrap" target="_blank">
-        <i class="fab fa-facebook-f mr-3"></i>
-      </a>
-
-      <a href="https://twitter.com/MDBootstrap" target="_blank">
-        <i class="fab fa-twitter mr-3"></i>
-      </a>
-
-      <a href="https://www.youtube.com/watch?v=7MUISDJ5ZZ4" target="_blank">
-        <i class="fab fa-youtube mr-3"></i>
-      </a>
-
-      <a href="https://plus.google.com/u/0/b/107863090883699620484" target="_blank">
-        <i class="fab fa-google-plus-g mr-3"></i>
-      </a>
-
-      <a href="https://dribbble.com/mdbootstrap" target="_blank">
-        <i class="fab fa-dribbble mr-3"></i>
-      </a>
-
-      <a href="https://pinterest.com/mdbootstrap" target="_blank">
-        <i class="fab fa-pinterest mr-3"></i>
-      </a>
-
-      <a href="https://github.com/mdbootstrap/bootstrap-material-design" target="_blank">
-        <i class="fab fa-github mr-3"></i>
-      </a>
-
-      <a href="http://codepen.io/mdbootstrap/" target="_blank">
-        <i class="fab fa-codepen mr-3"></i>
-      </a>
+      <!-- Social Icons Section -->
+      <div class="col-md-6 mb-4">
+        <h5 class="text-uppercase">🌍 Follow Us</h5>
+        <div class="pb-2">
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            class="text-white mx-2"
+          >
+            <i class="fab fa-facebook-f fa-lg"></i>
+          </a>
+          <a
+            href="https://twitter.com/"
+            target="_blank"
+            class="text-white mx-2"
+          >
+            <i class="fab fa-twitter fa-lg"></i>
+          </a>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            class="text-white mx-2"
+          >
+            <i class="fab fa-youtube fa-lg"></i>
+          </a>
+          <a href="https://github.com/" target="_blank" class="text-white mx-2">
+            <i class="fab fa-github fa-lg"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            class="text-white mx-2"
+          >
+            <i class="fab fa-instagram fa-lg"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/"
+            target="_blank"
+            class="text-white mx-2"
+          >
+            <i class="fab fa-linkedin fa-lg"></i>
+          </a>
+        </div>
+      </div>
     </div>
-    <!-- Social icons -->
+  </div>
 
-    <!--Copyright-->
-    <div class="footer-copyright py-3">
-      © 2019 Copyright:
-      <a href="https://mdbootstrap.com/education/bootstrap/" target="_blank"> MDBootstrap.com </a>
-    </div>
-    <!--/.Copyright-->
+  <hr class="my-3 border-light" />
 
-  </footer>
+  <!-- Copyright -->
+</footer>
+
+<!-- CSS تحسين أيقونات السوشيال ميديا -->
+<style>
+  .page-footer a {
+    transition: 0.3s;
+  }
+  .page-footer a:hover {
+    color: #f8b400 !important; /* لون ذهبي عند التحريك */
+    transform: scale(1.1);
+  }
+</style>
