--- a/templates/home.html
+++ b/templates/home.html
@@ -1,83 +1,54 @@
 {% extends "base.html" %} {% block content %}
-<main>
-  <div class="container">
-    <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5"
-    >
-      <!-- Navbar brand -->
-      <span class="navbar-brand">Categories:</span>
-      <!-- Collapse button -->
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#basicExampleNav"
-        aria-controls="basicExampleNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!-- Collapsible content -->
-      <div class="collapse navbar-collapse" id="basicExampleNav">
-        <!-- Links -->
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >All <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item"><a class="nav-link" href="#">Shirts</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Sport wears</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Outwears</a></li>
-        </ul>
-        <!-- Search form -->
-        <form class="form-inline">
-          <div class="md-form my-0">
-            <input
-              class="form-control mr-sm-2"
-              type="text"
-              placeholder="Search"
-              aria-label="Search"
-            />
-          </div>
-        </form>
-      </div>
-      <!-- Collapsible content -->
-    </nav>
-    <!-- Section: Products v.3 -->
+
+<main class="mt-5">
+  <div class="container-fluid">
+    <!-- Section: Product Listing -->
     <section class="text-center mb-4">
-      <div class="row wow fadeIn">
+      <div class="row justify-content-center wow fadeIn">
         {% for item in object_list %}
         <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
+          <div class="card shadow-sm rounded border-0">
+            <!-- Product Image -->
             <div class="view overlay">
-              <img src="{{ item.image.url }}" class="card-img-top" />
+              <img
+                src="{{ item.image.url }}"
+                class="card-img-top rounded-top"
+                alt="{{ item.title }}"
+              />
               <a href="{{ item.get_absolute_url }}">
                 <div class="mask rgba-white-slight"></div>
               </a>
             </div>
+
+            <!-- Product Details -->
             <div class="card-body text-center">
-              <a href="" class="grey-text">
-                <h5>{{ item.get_category_display }}</h5>
+              <a href="#" class="text-muted">
+                <h6 class="text-uppercase">{{ item.get_category_display }}</h6>
               </a>
-              <h5>
+
+              <h5 class="mt-2">
                 <strong>
-                  <a href="{{ item.get_absolute_url }}" class="dark-grey-text">
-                    {{ item.title }}
-                    <span
-                      class="badge badge-pill {{ item.get_label_display }}-color"
-                      >NEW</span
-                    >
+                  <a href="{{ item.get_absolute_url }}" class="text-dark">
+                    {{ item.title }} {% if item.get_label_display %}
+                    <span class="badge bg-danger text-white ms-2">NEW</span>
+                    {% endif %}
                   </a>
                 </strong>
               </h5>
-              <h4 class="font-weight-bold blue-text">
-                <strong>
-                  {% if item.discount_price %} ${{ item.discount_price }}
-                  {%else%} {{ item.price }} {% endif %}
-                </strong>
+
+              <!-- Price Section -->
+              {% comment %}
+              <h4 class="font-weight-bold mt-3">
+                {% if item.discount_price %}
+                <span class="text-muted">
+                  <del>${{ item.price }}</del>
+                </span>
+                <span class="text-success ms-2"
+                  >${{ item.discount_price }}</span
+                >
+                {% else %}
+                <span class="text-primary">${{ item.price }}</span>
+                {% endif %} {% endcomment %}
               </h4>
             </div>
           </div>
@@ -85,30 +56,31 @@
         {% endfor %}
       </div>
     </section>
+
     <!-- Pagination -->
     {% if page_obj.has_other_pages %}
     <div class="row">
       <div class="col-lg-12">
-        <div class="pagination_wrap d-flex justify-content-center">
-          <ul class="pagination">
+        <nav>
+          <ul class="pagination justify-content-center">
             <!-- Previous Button -->
             {% if page_obj.has_previous %}
             <li class="page-item">
               <a
                 href="?page={{ page_obj.previous_page_number }}"
                 class="page-link"
-                aria-label="Previous"
               >
-                <i class="ti-angle-left"></i> Previous
+                <i class="fas fa-chevron-left"></i> Previous
               </a>
             </li>
             {% else %}
             <li class="page-item disabled">
-              <span class="page-link">
-                <i class="ti-angle-left"></i> Previous
-              </span>
+              <span class="page-link"
+                ><i class="fas fa-chevron-left"></i> Previous</span
+              >
             </li>
             {% endif %}
+
             <!-- Page Numbers -->
             {% for i in page_obj.paginator.page_range %}
             <li
@@ -117,28 +89,27 @@
               <a href="?page={{ i }}" class="page-link">{{ i }}</a>
             </li>
             {% endfor %}
+
             <!-- Next Button -->
             {% if page_obj.has_next %}
             <li class="page-item">
-              <a
-                href="?page={{ page_obj.next_page_number }}"
-                class="page-link"
-                aria-label="Next"
-              >
-                Next <i class="ti-angle-right"></i>
+              <a href="?page={{ page_obj.next_page_number }}" class="page-link">
+                Next <i class="fas fa-chevron-right"></i>
               </a>
             </li>
             {% else %}
             <li class="page-item disabled">
-              <span class="page-link">
-                Next <i class="ti-angle-right"></i>
-              </span>
+              <span class="page-link"
+                >Next <i class="fas fa-chevron-right"></i
+              ></span>
             </li>
             {% endif %}
           </ul>
-        </div>
+        </nav>
       </div>
     </div>
-    {% endif %} {% endblock %}
+    {% endif %}
   </div>
 </main>
+
+{% endblock %}
